# unfolding

./: .gitignore  .pre-commit-config.yaml  1 Sphere example.ipynb  1 Sphere unfolding.ipynb  2 Comparison of several methods.ipynb  2 Comparison with MDS.ipynb  3 Flat example.ipynb  Example.ipynb  README.md  Unfolding.py  citation.cff  environment.yml  pyproject.toml  requirements.txt  utils_unfolding.py
src/: Unfolding.py  __init__.py  utils_unfolding.py
test/: __init__.py  dict_2d_3d.npy  faces.npy  faces_2d.npy  test_layers.py  test_mesh.py  test_tesselation.py  test_unfolding.py  unfolding.py  verts.npy  verts_2d.npy
unfolding/: __init__.py  _display.py  _layers.py  _mesh.py  _tessellation.py  _utils.py
